# Online_Mart_API

./: compose.yaml  gateway-startup.sh
db-service/: pyproject.toml
inventory-consumer-service/: .env  Dockerfile  pyproject.toml
inventory-consumer-service/inventory_consumer_service/: db.py  inventory.proto  inventory_pb2.py  main.py  models.py  order.proto  setting.py
inventory-service/: .env  Dockerfile  pyproject.toml
inventory-service/inventory_service/: inventory.proto  inventory_pb2.py  main.py  models.py  setting.py
inventory-service/inventory_service/proto/: operation_pb2.py
inventory-service/inventory_service/utils/: producer.py  topic.py
kong/: DockerFile  gateway-startup.sh
notification-service/: .env  Dockerfile  pyproject.toml
order-consumer-service/: .env  Dockerfile  README.md  pyproject.toml
order-consumer-service/order_consumer_service/: db.py  main.py  models.py  order.proto  order_pb2.py  setting.py
order-service/: .env  Dockerfile  README.md  pyproject.toml
order-service/order_service/: main.py  models.py  order.proto  order_pb2.py  setting.py
order-service/order_service/proto/: order.proto  order_pb2.py
order-service/order_service/utils/: producer.py  topic.py
product-consumer-service/: .env  Dockerfile  pyproject.toml
product-consumer-service/product_consumer_service/: db.py  main.py  models.py  product.proto  setting.py  (+1 more)
product-service/: .env  Dockerfile  pyproject.toml
user-service/: .env  Dockerfile  pyproject.toml
user-service/user_service/: auth.py  db.py  main.py  models.py  setting.py
user-service/user_service/utils/: logger.py  producer.py  topic.py
(+35 files in other folders)
